Bug #28491 Expand check gets disabled in some cases (initial node restart)
Submitted: 17 May 2007 6:53 Modified: 23 May 2007 15:37
Reporter: Jonas Oreland Email Updates:
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.1 OS:Any
Assigned to: Jonas Oreland Target Version:

[17 May 2007 6:53] Jonas Oreland
Description:
During some circumstances the expand check gets disabled in ACC
This leads to excessive chaining and really poor performance

How to repeat:
.

Suggested fix:
.
[17 May 2007 8:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/26887

ChangeSet@1.2478, 2007-05-17 08:54:30+02:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#28491
    disable "disable expand check" as it does not solve problems anyway
[23 May 2007 8:24] Bugs System
Pushed into 5.1.19-beta
[23 May 2007 15:37] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

No user-facing changes, closed without further action.