ndb - bug#28491   disable "disable expand check" as it does not solve problems anyway